Fixed: 'unknown flag y with snap'

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
 
 before_install:
   - sudo apt-get install snapd -y
-  - sudo snap install hugo -y
+  - sudo snap install hugo
 
 install:
   - hugo -t hugo-future-imperfect
