--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ canonifyURLs = true
   disable_highlight = false # set to true to disable Highlight
   highlightjsVersion = "9.11.0"
   highlightjsCDN = "//cdn.bootcss.com"
-  highlightjsLang = ["bash", "json", "yaml", "css", "java", "javascript", "nginx", "markdown", "csv"]
+  highlightjsLang = ["bash", "json", "yaml", "css", "java", "javascript", "nginx", "markdown"]
   highlightjsTheme = "github"
   MathJaxCDN = "//cdn.bootcss.com"
   MathJaxVersion = "2.7.1"
